fixed the scrollbar in visible sightings

--- a/app/assets/stylesheets/sightings.css.scss
+++ b/app/assets/stylesheets/sightings.css.scss
@@ -32,6 +32,7 @@
 	border-radius: 5px;
 	overflow: scroll;
 	margin-bottom: 20px;
+	height: 400px;
 }
 
 .variableSightingItem{
